<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TutorFind</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_profile_edit">Edit Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="button_register">Register</string>
    <string name="button_forgot_pw">Forgot</string>
    <string name="enter_login">someone@example.com</string>
    <string name="enter_password">Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="pref_db_address">Database address</string>
    <string name="pref_db_address_description">Address of database server</string>
    <string name="pref_db_port">Port</string>
    <string name="pref_db_port_description">Port of HTTP server at address</string>
    <string name="pref_use_cache">Use cache</string>
    <string name="pref_use_cache_description">Use experimental caching system</string>
    <string name="error_duplicate_user">Error: User already exists</string>
    <string name="error_invalid_password">Error: Password must contain at least 6 characters</string>
    <string name="error_invalid_login">Error: Invalid e-mail address</string>
    <string name="error_login_failed">Error: Email and Password did not match</string>
    <string name="error_connecting_to_server">Error: Could not connect to server</string>
    <string name="profile_edit_title">Please edit the following Categories</string>
    <string name="profile_placeholder">Profile Name Here</string>
    <string name="placeholder">Loading&#8230;</string>
    <string name="label_filter">Availability:</string>
    <string name="label_no_results">No Tutors Found</string>
    <string name="label_no_reviews">No Reviews Yet</string>
    <string name="label_no_favorites">No Favorites</string>
    <string name="label_advertise_contact">Want more clients now? Contact us at ads@team7.dyndns.org to inquire about current advertising rates!</string>
    
    <string name="title_activity_profile_edit">My Profile</string>
    <string name="title_activity_profile_view">ProfileView</string>
    <string name="title_activity_custom_favorites_adapter">CustomFavoritesAdapter</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_all_favorites">AllFavorites</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="title_activity_search">Results</string>
    <string name="title_activity_reviews">Reviews</string>
    				
    <string name="field_name">Name</string>
    <string name="field_email">Email</string>
    <string name="field_phone">Phone</string>
    <string name="field_about_me">About Me</string>
    <string name="field_subjects">Subjects</string>
    <string name="field_meeting_location">Meeting Location</string>
    <string name="field_rate">Rate</string>
    <string name="field_rating">Rating</string>
    <string name="field_availability">Availability</string>
    
    <string name="hint_name">Your Name</string>
    <string name="hint_email">you@example.com</string>
    <string name="hint_phone">555-555-1234</string>
    <string name="hint_about_me">Additional information about myself&#8230;</string>
    <string name="hint_subjects">Subject1, Subject2, CLASS-1234, &#8230;</string>
    <string name="hint_meeting_location">123 Somewhere St.\nSomewhere, TX 12345</string>
    <string name="hint_rate">$99.00/hr</string>
    <string name="hint_password">Password...</string>
    <string name="hint_password2">Re-enter Password...</string>

    <string-array name="availability_days">
        <item>Any Day</item>
        <item>Weekdays</item>
        <item>Weekend</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <integer-array name="availability_days_mask">
        <item>0x07777777</item>
        <item>0x07777700</item>
        <item>0x00000077</item>
        <item>0x07000000</item>
        <item>0x00700000</item>
        <item>0x00070000</item>
        <item>0x00007000</item>
        <item>0x00000700</item>
        <item>0x00000070</item>
        <item>0x00000007</item>
    </integer-array>
    <string-array name="availability_times">
        <item>Any Time</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>
    <integer-array name="availability_times_mask">
        <item>0x07777777</item>
        <item>0x01111111</item>
        <item>0x02222222</item>
        <item>0x04444444</item>
    </integer-array>
    
    <string-array name="action_list">
        <item>@string/action_list_my_profile</item>
        <item>@string/action_list_favorites</item>
    </string-array>

    <string name="action_list_my_profile">My Profile</string>
    <string name="action_list_favorites">Favorites</string>
    <string name="filter_by_distance">By distance</string>
    <string name="filter_by_price">By price</string>
    <string name="filter_by_rating">By rating</string>
    <string name="action_filter">Filter</string>
    <string name="add_review_text">Add Review</string>
    <string name="showReviewsButton">Show Reviews</string>
    <string name="review_title">Add Review</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_map">Map</string>
    <string name="action_add_review">Add Review</string>
    <string name="action_toggle_favorite">Toggle Favorite</string>
    <string name="advertisement">advertisement</string>
    <string name="action_edit_save">Save</string>
    <string name="action_edit_cancel">Discard</string>
    <string name="action_add_day">Add Day</string>
</resources>
