<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical" >

	    <LinearLayout
	        android:id="@+id/common_list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginBottom="20dp"
	        android:orientation="vertical" >
	        
	        <LinearLayout style="@style/ProfileItemLayoutStyle">
			    <TextView style="@style/ProfileItemTitleStyle"
			        android:text="@string/field_name" />
			    <EditText style="@style/ProfileItemEditTextStyle"
			        android:tag="name"
			        android:inputType="text"
			        android:hint="@string/hint_name" />
			</LinearLayout>
			
			<LinearLayout style="@style/ProfileItemLayoutStyle">
			    <TextView style="@style/ProfileItemTitleStyle"
			        android:text="@string/field_email" />
			    <EditText style="@style/ProfileItemEditTextStyle"
			        android:tag="public_email_address"
			        android:inputType="text|textEmailAddress"
			        android:hint="@string/hint_email" />
			</LinearLayout>
			
			<LinearLayout style="@style/ProfileItemLayoutStyle">
			    <TextView style="@style/ProfileItemTitleStyle"
			        android:text="@string/field_phone" />
			    <EditText style="@style/ProfileItemEditTextStyle"
			        android:tag="phone"
			        android:inputType="phone"
			        android:hint="@string/hint_phone" />
			</LinearLayout>

			
	    </LinearLayout>

	    <CheckBox
	        android:id="@+id/is_tutor_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="I want to tutor a subject" />

	    <LinearLayout
	        android:id="@+id/tutor_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
			
			<LinearLayout style="@style/ProfileItemLayoutStyle">
			    <TextView style="@style/ProfileItemTitleStyle"
			        android:text="@string/field_subjects" />
			    <EditText style="@style/ProfileItemEditTextStyle"
			        android:tag="subject_tags"
			        android:inputType="text|textMultiLine"
			        android:hint="@string/hint_subjects" />
			</LinearLayout>
			

			<LinearLayout style="@style/ProfileItemLayoutStyle">
			    <TextView style="@style/ProfileItemTitleStyle"
			        android:text="@string/field_meeting_location" />
			    <EditText style="@style/ProfileItemEditTextStyle"
			        android:tag="loc_address"
			        android:inputType="text|textPostalAddress|textMultiLine"
			        android:hint="@string/hint_meeting_location" />
			</LinearLayout>
			
			<LinearLayout style="@style/ProfileItemLayoutStyle">
			    <TextView style="@style/ProfileItemTitleStyle"
			        android:text="@string/field_rate" />
			    <EditText style="@style/ProfileItemEditTextStyle"
			        android:tag="price_per_hour"
			        android:inputType="number|numberDecimal"
			        android:hint="@string/hint_rate" />
			</LinearLayout>
			
			<LinearLayout style="@style/ProfileItemLayoutStyle">
			    <TextView style="@style/ProfileItemTitleStyle"
			        android:text="@string/field_about_me" />
			    <EditText style="@style/ProfileItemEditTextStyle"
			        android:tag="about_me"
			        android:inputType="text|textMultiLine"
			        android:hint="@string/hint_about_me" />	        
			</LinearLayout>
	    </LinearLayout>

    </LinearLayout>

  
</ScrollView>
