<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_settings" android:onClick="onSettingsOption">
    </item>
    <item android:id="@+id/action_logout" android:orderInCategory="100" android:title="@string/action_logout" android:showAsAction="never" android:onClick="onLogoutOption"></item>
    <item android:id="@+id/action_search" android:title="@string/action_search" android:icon="@android:drawable/ic_menu_search" android:actionViewClass="android.widget.SearchView" android:orderInCategory="0" android:showAsAction="ifRoom|collapseActionView"></item>
    <item android:id="@+id/action_password_change" android:onClick="onChangePasswordOption" android:title="@string/action_change_password" android:showAsAction="never" android:orderInCategory="99"></item>

</menu>
